# beatsaver-rs

./: Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml  rust.yml
src/: client.rs  lib.rs  main.rs  map.rs  tests.rs
src/async_api/: mod.rs  tests.rs
src/client/: mod.rs  reqwest_client.rs  surf_client.rs  ureq_client.rs
src/model/: map.rs  mod.rs  user.rs
src/sync_api/: mod.rs  tests.rs
