[package]
name = "beatsaver-rs"
version = "0.2.0"
description = "A Rust library for interacting with the beatsaver.com api"
documentation = "https://docs.rs/beatsaver-rs/"
authors = ["qwerty01 <qw3rty01@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/qwerty01/beatsaver-rs"
keywords = ["beatsaber", "beatsaver", "beastsaber", "bsaber", "api"]
categories = ["api-bindings", "asynchronous", "web-programming"]

[features]
default = ["reqwest_backend"]
async = ["async-trait", "futures"]
sync = []
surf_backend = ["async-std", "surf", "async"]
reqwest_backend = ["tokio", "reqwest", "async"]
ureq_backend = ["sync", "ureq"]
hash = ["sha2"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
url = "2.2"
lazy_static = "1.4"
urlencoding = "1.1"
bytes = "1.0"
thiserror = "1.0.23"
surf = { version = "2.1", optional = true }
async-std = { version = "1.7", features = ["attributes"], optional = true }
async-trait = { version = "0.1", optional = true }
futures = {version = "0.3.8", optional = true }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"], optional = true }
reqwest = { version = "0.11", optional = true }
sha2 = { version = "0.9", optional = true }
ureq = { version = "2.0", optional = true }
